[package]
name = "aipman"
authors = [ "Dylan Turner <dylantdmt@gmail.com>" ]
version = "2.0.0"
edition = "2021"
license = "GPL3"
description = "The AppImage Package Manager"
readme = "README.md"
categories = [ "config", "filesystem" ]
repository = "https://github.com/blueOkiris/aip-man"

[dependencies]
clap = { version = "4.1.1", features = [ "derive" ] }
reqwest = { version = "0.11.13", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.91"
dirs = "4.0.0"
version-compare = "0.1.1"
